# fakemodule

./: README.md  setup.cfg
src/fakemodule/: __init__.py  classes.py
test/: README.md  test_fakemodule.py
