[metadata]
name = fakemodule
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
# install_requires =

    #importlib; python_version >= "3.7"
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
test = quicktest @ git+https://github.com/denwong47/quicktest